--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h2>At least to be clear, we do ths not for you.</h2>
         </div>
         <div class = "headerbutton">
-            <p href="">READ MORE</p>
+            <p href="">READ MOR</p>
         </div>
 
             <div class="balls">
