--- a/index.html
+++ b/index.html
@@ -197,26 +197,26 @@
         <div class="footer-addresses">
             
             <div>
-                <img src="img/icons/Phone.png" alt="">
+                <img src="img/icons/Phone.png" alt="" width="8%">
                 <h3>666-666-666</h3>
             </div>
             <div>
-                <img src="img/icons/GPS.png" alt="">
+                <img src="img/icons/GPS.png" alt="" width="8%">
                 <h3>Проспект Авиации, <br> дом мастурбации</h3>
             </div>
             <div>
-                <img src="img/icons/MAIL.png" alt="">
+                <img src="img/icons/MAIL.png" alt="" width="8%">
                 <h3>webby@gmail.org</h3>
             </div>
 
         </div>
 
             <form action="">
-                <input type="text"> <br>
-                <input type="email"> <br>
-                <input type="tel"> <br>
-                <textarea name="" id="" cols="30" rows="10"></textarea> <br>
-                <input type="submit">
+                <input type="text" placeholder="Full Name"> <br>
+                <input type="email" placeholder="E-Mail"> <br>
+                <input type="tel" placeholder="Number"> <br>
+                <textarea name="" id="" cols="30" rows="9" placeholder="Write your Message here..."></textarea> <br>
+                <button class="form-submit">Submit</button>
             </form>
 
             <div></div>
