--- a/index.html
+++ b/index.html
@@ -85,9 +85,11 @@
         </div>
     </div>
 
-    <div class="buildings" id="buildings">
-        <img class="bldngs-black" src="img/_buildings/buildings-black.png" alt="" >
-        <img class="bldngs-white" src="img/_buildings/buildings-white.png" alt="">
+    <div class="railroad">
+        <div class="buildings" id="buildings">
+            <img class="bldngs-black" src="img/_buildings/buildings-black.png" alt="" >
+            <img class="bldngs-white" src="img/_buildings/buildings-white.png" alt="">
+        </div>
     </div>
 
     <div class="team" id="test">
